--- a/chrome-react-seo-extension/package.json
+++ b/chrome-react-seo-extension/package.json
@@ -10,7 +10,10 @@
     "@types/node": "^16.18.21",
     "@types/react": "^18.0.29",
     "@types/react-dom": "^18.0.11",
+    "axios": "^1.3.4",
+    "dotenv": "^16.0.3",
     "react": "^18.2.0",
+    "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
