--- a/scraper/package.json
+++ b/scraper/package.json
@@ -2,7 +2,7 @@
   "name": "scrapeSis",
   "main": "index.js",
   "dependencies": {
-    "chrome-aws-lambda": "^10.1.0",
-    "puppeteer-core": "^10.4.0"
+    "express": "^4.18.2",
+    "puppeteer": "^19.8.0"
   }
 }
