fixed start script

--- a/scraper/package.json
+++ b/scraper/package.json
@@ -4,5 +4,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "puppeteer": "^19.8.0"
+  },
+  "scripts": {
+  "start": "node index.js"
   }
 }
