--- a/scraper/package.json
+++ b/scraper/package.json
@@ -6,6 +6,7 @@
     "puppeteer": "^19.8.0"
   },
   "scripts": {
-  "start": "node index.js"
+    "build": "npm install",
+    "start": "node index.js"
   }
 }
