--- a/scraper/Dockerfile
+++ b/scraper/Dockerfile
@@ -6,6 +6,7 @@ ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
 WORKDIR /usr/src/app
 
 COPY package*.json ./
-RUN npm i
+RUN npm install -g npm@latest
+RUN npm ci
 COPY . .
 CMD [ "node", "index.js" ]
