trying to fix docker

--- a/scraper/Dockerfile
+++ b/scraper/Dockerfile
@@ -6,7 +6,6 @@ ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
 WORKDIR /usr/src/app
 
 COPY package*.json ./
-RUN npm install -g npm@latest
-RUN npm ci
+CMD ["npm", "install"]
 COPY . .
 CMD [ "node", "index.js" ]
