--- a/scraper/package.json
+++ b/scraper/package.json
@@ -2,6 +2,7 @@
   "name": "scrapeSis",
   "main": "index.js",
   "dependencies": {
+    "chatgpt-wrapper": "^1.1.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "puppeteer": "^19.7.2"
