--- a/chrome-react-seo-extension/public/manifest.json
+++ b/chrome-react-seo-extension/public/manifest.json
@@ -2,11 +2,21 @@
   "name": "Chrome React Extension",
   "description": "Template for creating Crome extensions with React",
   "version": "1.0",
-  "manifest_version": 3,
+  "manifest_version": 2,
   "action": {
       "default_popup": "index.html",
       "default_title": "Open the popup"
   },
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
+  "permissions": [
+    "tabs",
+    "cookies",
+    "http://*/*",
+    "https://*/*"
+  ],
   "icons": {
       "16": "logo192.png",
       "48": "logo192.png",
